fixes sidebar module title text wrap

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -30,6 +30,7 @@
 .title {
   font-size: var(--text-reduced);
   padding-top: 20px;
+  text-wrap: pretty;
 }
 
 .toggleButton {
